seance 3 Js Client Side

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -12,7 +13,8 @@
         <li>GL2 G2</li>
         <li>GL2 G3</li>
     </ol>
+
+    <script src="js/iterateElements.js"></script>
 </div>
-<script src="js/script.js"></script>
 </body>
 </html>
